# textblog

./: pyproject.toml
src/textblog/: __init__.py  helpers.py  main.py
