[project]
name = "textblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "validators>=0.34.0",
]

[project.scripts]
textblog = "textblog:main.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
